check title text

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     </ul>
   </section>
   <section class="we-do">
-    <h2 class="we-do__title"></h2>
+    <h2 class="we-do__title">Наша команда</h2>
     <ul class="we-do__list">
       <li class="we-do__item">
         <a href="#" class="we-do__link">
