check title text

--- a/index.html
+++ b/index.html
@@ -25,15 +25,16 @@
         <a class="page-links__link" href="#">Контакты</a>
       </li>
     </ul>
-    <ul class="nav__contact-links contact-links">
-      <li class="contact-links__item">
-        <a class="contact-links__link" href="mailto:info@devstudio.com">info@devstudio.com</a>
-      </li>
-      <li class="contact-links__item">
-        <a class="contact-links__link" href="tel:+380961111111">+38 096 111 11 11</a>
-      </li>
-    </ul>
   </nav>
+  <ul class="nav__contact-links contact-links">
+    <li class="contact-links__item">
+      <a class="contact-links__link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+    </li>
+    <li class="contact-links__item">
+      <a class="contact-links__link" href="tel:+380961111111">+38 096 111 11 11</a>
+    </li>
+  </ul>
+
 </header>
 <main>
   <section class="intro">
@@ -46,19 +47,22 @@
       <li class="promo__item">
         <div class="promo-card">
           <h3 class="promo-card__title">Внимание к деталям</h3>
-          <p class="promo-card__desc">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+          <p class="promo-card__desc">Идейные соображения, а также начало повседневной работы по формированию
+            позиции.</p>
         </div>
       </li>
       <li class="promo__item">
         <div class="promo-card">
           <h3 class="promo-card__title">Пунктуальность</h3>
-          <p class="promo-card__desc">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+          <p class="promo-card__desc">Задача организации, в особенности же рамки и место обучения кадров влечет за
+            собой.</p>
         </div>
       </li>
       <li class="promo__item">
         <div class="promo-card">
           <h3 class="promo-card__title">Планирование</h3>
-          <p class="promo-card__desc">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+          <p class="promo-card__desc">Равным образом консультация с широким активом в значительной степени
+            обуславливает.</p>
         </div>
       </li>
       <li class="promo__item">
@@ -70,7 +74,7 @@
     </ul>
   </section>
   <section class="we-do">
-    <h2 class="we-do__title">Наша команда</h2>
+    <h2 class="we-do__title">Чем мы занимаемся</h2>
     <ul class="we-do__list">
       <li class="we-do__item">
         <a href="#" class="we-do__link">
@@ -79,12 +83,14 @@
       </li>
       <li class="we-do__item">
         <a href="#" class="we-do__link">
-          <img src="./images/about/img02.jpg" alt="Процесс тестирования продукта" title="Как тестируем продукт" class="we-do__img">
+          <img src="./images/about/img02.jpg" alt="Процесс тестирования продукта" title="Как тестируем продукт"
+               class="we-do__img">
         </a>
       </li>
       <li class="we-do__item">
         <a href="#" class="we-do__link">
-          <img src="./images/about/img03.jpg" alt="Поиск нужного цвета дизайнером на планшете" title="Как составляем макеты" class="we-do__img">
+          <img src="./images/about/img03.jpg" alt="Поиск нужного цвета дизайнером на планшете"
+               title="Как составляем макеты" class="we-do__img">
         </a>
       </li>
     </ul>
