check img and button

--- a/index.html
+++ b/index.html
@@ -34,12 +34,11 @@
       <a class="contact-links__link" href="tel:+380961111111">+38 096 111 11 11</a>
     </li>
   </ul>
-
 </header>
 <main>
   <section class="intro">
     <h1 class="intro__title">Эффективные решения для вашего бизнеса</h1>
-    <a class="btn intro__btn" href="#">Заказать услугу</a>
+    <button class="btn intro__btn" type="button">Заказать услугу</button>
   </section>
   <section class="promo">
     <h2 class="visually-hidden">Наши преимущества</h2>
@@ -78,19 +77,20 @@
     <ul class="we-do__list">
       <li class="we-do__item">
         <a href="#" class="we-do__link">
-          <img src="./images/about/img01.jpg" alt="Процесс кодинга продукта" title="Как мы кодим" class="we-do__img">
+          <img src="./images/about/img01.jpg" alt="Процесс кодинга продукта" title="Как мы кодим"
+               width="370" class="we-do__img">
         </a>
       </li>
       <li class="we-do__item">
         <a href="#" class="we-do__link">
           <img src="./images/about/img02.jpg" alt="Процесс тестирования продукта" title="Как тестируем продукт"
-               class="we-do__img">
+               width="370" class="we-do__img">
         </a>
       </li>
       <li class="we-do__item">
         <a href="#" class="we-do__link">
           <img src="./images/about/img03.jpg" alt="Поиск нужного цвета дизайнером на планшете"
-               title="Как составляем макеты" class="we-do__img">
+               title="Как составляем макеты" width="370" class="we-do__img">
         </a>
       </li>
     </ul>
@@ -100,7 +100,7 @@
     <ul class="team__list">
       <li class="team__item">
         <figure class="employee-card">
-          <img class="employee-card__img" src="./images/team/img01.jpg" alt="Сотрудник">
+          <img class="employee-card__img" src="./images/team/img01.jpg" alt="Сотрудник" width="270">
           <figcaption class="employee-card__desc">
             <p class="employee-card__name">Игорь Демьяненко</p>
             <p class="employee-card__position">Product Designer</p>
@@ -110,7 +110,7 @@
       <li class="team__item">
         <div class="employee-card">
           <figure class="employee-card">
-            <img class="employee-card__img" src="./images/team/img02.jpg" alt="Сотрудник">
+            <img class="employee-card__img" src="./images/team/img02.jpg" alt="Сотрудник" width="270">
             <figcaption class="employee-card__desc">
               <p class="employee-card__name">Ольга Репина</p>
               <p class="employee-card__position">Frontend Developer</p>
@@ -120,7 +120,7 @@
       </li>
       <li class="team__item">
         <figure class="employee-card">
-          <img class="employee-card__img" src="./images/team/img03.jpg" alt="Сотрудник">
+          <img class="employee-card__img" src="./images/team/img03.jpg" alt="Сотрудник" width="270">
           <figcaption class="employee-card__desc">
             <p class="employee-card__name">Николай Тарасов</p>
             <p class="employee-card__position">Marketing</p>
@@ -129,7 +129,7 @@
       </li>
       <li class="team__item">
         <figure class="employee-card">
-          <img class="employee-card__img" src="./images/team/img04.jpg" alt="Сотрудник">
+          <img class="employee-card__img" src="./images/team/img04.jpg" alt="Сотрудник" width="270">
           <figcaption class="employee-card__desc">
             <p class="employee-card__name">Михаил Ермаков</p>
             <p class="employee-card__position">UI Designer</p>
