--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
 <header class="header">
   <nav class="nav">
-    <a class="nav__logo" href="#">WebStudio</a>
+    <a class="nav__logo" href="./index.html">WebStudio</a>
     <ul class="nav__page-links page-links">
       <li class="page-links__item">
         <a class="page-links__link" href="#">Студия</a>
