add studio link

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <a class="nav__logo" href="./index.html">WebStudio</a>
     <ul class="nav__page-links page-links">
       <li class="page-links__item">
-        <a class="page-links__link" href="#">Студия</a>
+        <a class="page-links__link" href="./index.html">Студия</a>
       </li>
       <li class="page-links__item">
         <a class="page-links__link" href="#">Портфолио</a>
