--- a/index.html
+++ b/index.html
@@ -93,42 +93,26 @@
     <h2 class="team__title">Наша команда</h2>
     <ul class="team__list">
       <li class="team__item">
-        <figure class="employee-card">
-          <img class="employee-card__img" src="./images/team/img01.jpg" alt="Сотрудник" width="270">
-          <figcaption class="employee-card__desc">
-            <p class="employee-card__name">Игорь Демьяненко</p>
-            <p class="employee-card__position">Product Designer</p>
-          </figcaption>
-        </figure>
+        <img class="employee-card__img" src="./images/team/img01.jpg" alt="Сотрудник" width="270">
+        <h3 class="employee-card__name">Игорь Демьяненко</h3>
+        <p class="employee-card__position">Product Designer</p>
       </li>
       <li class="team__item">
         <div class="employee-card">
-          <figure class="employee-card">
-            <img class="employee-card__img" src="./images/team/img02.jpg" alt="Сотрудник" width="270">
-            <figcaption class="employee-card__desc">
-              <p class="employee-card__name">Ольга Репина</p>
-              <p class="employee-card__position">Frontend Developer</p>
-            </figcaption>
-          </figure>
+          <img class="employee-card__img" src="./images/team/img02.jpg" alt="Сотрудник" width="270">
+          <h3 class="employee-card__name">Ольга Репина</h3>
+          <p class="employee-card__position">Frontend Developer</p>
         </div>
       </li>
       <li class="team__item">
-        <figure class="employee-card">
-          <img class="employee-card__img" src="./images/team/img03.jpg" alt="Сотрудник" width="270">
-          <figcaption class="employee-card__desc">
-            <p class="employee-card__name">Николай Тарасов</p>
-            <p class="employee-card__position">Marketing</p>
-          </figcaption>
-        </figure>
+        <img class="employee-card__img" src="./images/team/img03.jpg" alt="Сотрудник" width="270">
+        <h3 class="employee-card__name">Николай Тарасов</h3>
+        <p class="employee-card__position">Marketing</p>
       </li>
       <li class="team__item">
-        <figure class="employee-card">
-          <img class="employee-card__img" src="./images/team/img04.jpg" alt="Сотрудник" width="270">
-          <figcaption class="employee-card__desc">
-            <p class="employee-card__name">Михаил Ермаков</p>
-            <p class="employee-card__position">UI Designer</p>
-          </figcaption>
-        </figure>
+        <img class="employee-card__img" src="./images/team/img04.jpg" alt="Сотрудник" width="270">
+        <h3 class="employee-card__name">Михаил Ермаков</h3>
+        <p class="employee-card__position">UI Designer</p>
       </li>
     </ul>
   </section>
