add href to footer logo

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
   </section>
 </main>
 <footer class="footer">
-  <a class="footer__logo" href="#">WebStudio</a>
+  <a class="footer__logo" href="./index.html">WebStudio</a>
   <address class="footer__address">г. Киев, пр-т Леси Украинки, 26</address>
   <ul class="footer__contact-links contact-links">
     <li class="contact-links__item">
