--- a/index.html
+++ b/index.html
@@ -1,19 +1,18 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="ru">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport"
-        content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <meta name="description" content="Task1 Главная">
-  <meta name="words" content="дизайн, веб-студия, html, css, javascript, react, nodejs, сайт">
-  <link href="./style.css" rel="stylesheet">
-  <title>Task1 Главная</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <meta name="description" content="Task1 Главная" />
+  <meta name="words" content="дизайн, веб-студия, html, css, javascript, react, nodejs, сайт" />
+  <link href="./style.css" rel="stylesheet" />
+  <title>Главная - WebStudio</title>
 </head>
 <body>
 <header class="header">
   <nav class="nav">
-    <a class="nav__logo" href="./index.html">WebStudio</a>
+    <a class="nav__logo logo" href="./index.html" ><span class="logo__accent">Web</span>Studio</a>
     <ul class="nav__page-links page-links">
       <li class="page-links__item">
         <a class="page-links__link" href="./index.html">Студия</a>
@@ -26,7 +25,7 @@
       </li>
     </ul>
   </nav>
-  <ul class="nav__contact-links contact-links">
+  <ul class="header__contact-links contact-links">
     <li class="contact-links__item">
       <a class="contact-links__link" href="mailto:info@devstudio.com">info@devstudio.com</a>
     </li>
@@ -46,28 +45,33 @@
       <li class="promo__item">
         <div class="promo-card">
           <h3 class="promo-card__title">Внимание к деталям</h3>
-          <p class="promo-card__desc">Идейные соображения, а также начало повседневной работы по формированию
-            позиции.</p>
+          <p class="promo-card__desc">
+            Идейные соображения, а также начало повседневной работы по формированию позиции.
+          </p>
         </div>
       </li>
       <li class="promo__item">
         <div class="promo-card">
           <h3 class="promo-card__title">Пунктуальность</h3>
-          <p class="promo-card__desc">Задача организации, в особенности же рамки и место обучения кадров влечет за
-            собой.</p>
+          <p class="promo-card__desc">
+            Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
+          </p>
         </div>
       </li>
       <li class="promo__item">
         <div class="promo-card">
           <h3 class="promo-card__title">Планирование</h3>
-          <p class="promo-card__desc">Равным образом консультация с широким активом в значительной степени
-            обуславливает.</p>
+          <p class="promo-card__desc">
+            Равным образом консультация с широким активом в значительной степени обуславливает.
+          </p>
         </div>
       </li>
       <li class="promo__item">
         <div class="promo-card">
           <h3 class="promo-card__title">Современные технологии</h3>
-          <p class="promo-card__desc">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+          <p class="promo-card__desc">
+            Значимость этих проблем настолько очевидна, что реализация плановых заданий.
+          </p>
         </div>
       </li>
     </ul>
@@ -76,16 +80,31 @@
     <h2 class="we-do__title">Чем мы занимаемся</h2>
     <ul class="we-do__list">
       <li class="we-do__item">
-        <img src="./images/about/img01.jpg" alt="Процесс кодинга продукта" title="Как мы кодим"
-             width="370" class="we-do__img">
+        <img
+          src="./images/about/img01.jpg"
+          alt="Процесс кодинга продукта"
+          title="Как мы кодим"
+          width="370"
+          class="we-do__img"
+        />
       </li>
       <li class="we-do__item">
-        <img src="./images/about/img02.jpg" alt="Процесс тестирования продукта" title="Как тестируем продукт"
-             width="370" class="we-do__img">
+        <img
+          src="./images/about/img02.jpg"
+          alt="Процесс тестирования продукта"
+          title="Как тестируем продукт"
+          width="370"
+          class="we-do__img"
+        />
       </li>
       <li class="we-do__item">
-        <img src="./images/about/img03.jpg" alt="Поиск нужного цвета дизайнером на планшете"
-             title="Как составляем макеты" width="370" class="we-do__img">
+        <img
+          src="./images/about/img03.jpg"
+          alt="Поиск нужного цвета дизайнером на планшете"
+          title="Как составляем макеты"
+          width="370"
+          class="we-do__img"
+        />
       </li>
     </ul>
   </section>
@@ -93,32 +112,58 @@
     <h2 class="team__title">Наша команда</h2>
     <ul class="team__list">
       <li class="team__item">
-        <img class="employee-card__img" src="./images/team/img01.jpg" alt="Сотрудник" width="270">
-        <h3 class="employee-card__name">Игорь Демьяненко</h3>
-        <p class="employee-card__position">Product Designer</p>
+        <div class="employee-card">
+          <img
+            class="employee-card__img"
+            src="./images/team/img01.jpg"
+            alt="Сотрудник"
+            width="270"
+          />
+          <h3 class="employee-card__name">Игорь Демьяненко</h3>
+          <p class="employee-card__position">Product Designer</p>
+        </div>
       </li>
       <li class="team__item">
         <div class="employee-card">
-          <img class="employee-card__img" src="./images/team/img02.jpg" alt="Сотрудник" width="270">
+          <img
+            class="employee-card__img"
+            src="./images/team/img02.jpg"
+            alt="Сотрудник"
+            width="270"
+          />
           <h3 class="employee-card__name">Ольга Репина</h3>
           <p class="employee-card__position">Frontend Developer</p>
         </div>
       </li>
       <li class="team__item">
-        <img class="employee-card__img" src="./images/team/img03.jpg" alt="Сотрудник" width="270">
-        <h3 class="employee-card__name">Николай Тарасов</h3>
-        <p class="employee-card__position">Marketing</p>
+        <div class="employee-card">
+          <img
+            class="employee-card__img"
+            src="./images/team/img03.jpg"
+            alt="Сотрудник"
+            width="270"
+          />
+          <h3 class="employee-card__name">Николай Тарасов</h3>
+          <p class="employee-card__position">Marketing</p>
+        </div>
       </li>
       <li class="team__item">
-        <img class="employee-card__img" src="./images/team/img04.jpg" alt="Сотрудник" width="270">
-        <h3 class="employee-card__name">Михаил Ермаков</h3>
-        <p class="employee-card__position">UI Designer</p>
+        <div class="employee-card">
+          <img
+            class="employee-card__img"
+            src="./images/team/img04.jpg"
+            alt="Сотрудник"
+            width="270"
+          />
+          <h3 class="employee-card__name">Михаил Ермаков</h3>
+          <p class="employee-card__position">UI Designer</p>
+        </div>
       </li>
     </ul>
   </section>
 </main>
 <footer class="footer">
-  <a class="footer__logo" href="./index.html">WebStudio</a>
+  <a class="footer__logo logo" href="./index.html"><span class="logo__accent">Web</span>Studio</a>
   <address class="footer__address">г. Киев, пр-т Леси Украинки, 26</address>
   <ul class="footer__contact-links contact-links">
     <li class="contact-links__item">
